--- a/Financier.Web/Views/Items/Chart.cshtml
+++ b/Financier.Web/Views/Items/Chart.cshtml
@@ -50,6 +50,7 @@
 <script src="~/js/apollo-client.min.js"></script>
 <script src="~/js/d3.min.js"></script>
 <script src="~/js/d3-axis.min.js"></script>
+<script src="~/js/lodash.min.js"></script>
 </script>
 
 <script type="text/javascript">
@@ -322,9 +323,19 @@
 
     function Details(selector, data) {
       this.selector = selector;
-      this.data = data;
+      this.data = _.orderBy(data, item => new Date(item.year, item.month, 1), "desc");
 
-      // TODO: sort the items in descending order by date
+      // data.sort((first, second) => {
+      //   var firstDate = new Date(first.year, first.month, 1);
+      //   var secondDate = new Date(second.year, second.month, 1);
+      //
+      //   if (firstDate < secondDate) {
+      //     return 1;
+      //   } else if (firstDate > secondDate) {
+      //     return -1;
+      //   }
+      //   return 0;
+      // });
     }
 
     Details.prototype.getContainer = function() {
@@ -359,8 +370,31 @@
     };
 
     function Month(selector, data) {
+      var getDate = (string) => {
+        return new Date(
+          string.substr(0, 4),
+          string.substr(5, 2),
+          string.substr(8, 2)
+        );
+      };
+
       this.selector = selector;
-      this.data = data;
+      // this.data = data;
+
+      this.data = _.orderBy(data, item => getDate(item.at), "asc");
+
+      // this.data.sort((first, second) => {
+      //   var firstDate = getDate(first);
+      //   var secondDate = getDate(second);
+      //
+      //   if (firstDate < secondDate) {
+      //     return -1;
+      //   } else if (firstDate > secondDate) {
+      //     return 1;
+      //   }
+      //   return 0;
+      // });
+      // }
 
       // TODO: sort the items in ascending order by date
     }
