--- a/Financier.Web/wwwroot/css/items.css
+++ b/Financier.Web/wwwroot/css/items.css
@@ -26,12 +26,6 @@
     display: none;
 }
 
-.results {
-    display: flew;
-    flex-flow: nowrap;
-    flex-direction: row;
-}
-
 .charts .items {
     display: flex;
     flex-flow: nowrap;
@@ -42,8 +36,11 @@
     max-width: 25%;
 }
 
-.charts .items .chart {
+.charts .items .results {
     max-width: 75%;
+    display: flex;
+    flex-flow: nowrap;
+    flex-direction: column;
 }
 
 .details {
