--- a/Financier.Web/Views/Statements/GetMonth.cshtml
+++ b/Financier.Web/Views/Statements/GetMonth.cshtml
@@ -1,4 +1,4 @@
-﻿@model Financier.Web.ViewModels.Statement
+﻿@model Financier.Common.Expenses.MonthlyAnalysis
 @using Financier.Common.Extensions
 
 <link href="~/css/site.css" rel="stylesheet">
@@ -35,7 +35,7 @@
     function request(year, month) {
       var client = new Apollo.lib.ApolloClient({
         networkInterface: Apollo.lib.createNetworkInterface({
-          uri: '/graphql/statements',
+          uri: '/graphql/analyses',
           transportBatching: true,
         }),
         connectToDevTools: true,
@@ -45,17 +45,17 @@
         .query({
           query: Apollo.gql`
             {
-              statement(
+              analysis(
                 year: ${year},
                 month: ${month}
               ) {
-                assetCosts {
+                assetListings {
                   tags {
                     name
                   }
                   amount
                 }
-                expenseCosts {
+                expenseListings {
                   tags {
                     name
                   }
@@ -71,9 +71,9 @@
           var width = 960;
           var height = 500;
           new Chart(".charts #asset-costs", width, height)
-            .render(response.data.statements.assetCosts);
+            .render(response.data.analysis.assetListings);
           new Chart(".charts #expense-costs", width, height)
-            .render(response.data.statements.expenseCosts);
+            .render(response.data.analysis.expenseListings);
         });
     }
 
@@ -240,64 +240,43 @@
 <div>
   <div>
     <h1>
-      Assets:&nbsp;@(Model.GetAssetTotal())
+      Assets:&nbsp;@(Model.AssetAmountTotal)
     </h1>
 
     <h1>
-      Expense:&nbsp;@(Model.GetExpenseTotal())
+      Expense:&nbsp;@(Model.ExpenseAmountTotal)
     </h1>
 
     <h1>
-      Profit:&nbsp;@(Model.GetProfitTotal())
+      Profit:&nbsp;@(Model.ProfitAmountTotal)
     </h1>
   </div>
   <div class="tag-costs">
     <h2>Assets</h2>
-    @foreach (var tagCost in Model.AssetCosts.OrderBy(tc => tc.Amount))
+    @foreach (var listing in Model.AssetListings.OrderBy(tc => tc.Amount))
     {
     <div class="flex-container">
       <div class="flex-item flex-tags">
-        @(tagCost.Tags.Select(tag => tag.Name).Join(", "))
+        @(listing.Tags.Select(tag => tag.Name).Join(", "))
       </div>
       <div class="flex-item flex-amount">
-        @((tagCost.Amount / Model.AssetAmountTotal).ToString("#0.00 %"))
+        @((listing.Amount / Model.AssetAmountTotal).ToString("#0.00 %"))
       </div>
     </div>
     }
   </div>
   <div class="tag-costs">
     <h2>Expenses</h2>
-    @foreach (var tagCost in Model.ExpenseCosts.OrderBy(tc => tc.Amount))
+    @foreach (var listing in Model.ExpenseListings.OrderBy(tc => tc.Amount))
     {
     <div class="flex-container">
       <div class="flex-item flex-tags">
-        @(tagCost.Tags.Select(tag => tag.Name).Join(", "))
+        @(listing.Tags.Select(tag => tag.Name).Join(", "))
       </div>
       <div class="flex-item flex-amount">
-        @((tagCost.Amount / Model.ExpenseAmountTotal).ToString("#0.00 %"))
+        @((listing.Amount / Model.ExpenseAmountTotal).ToString("#0.00 %"))
       </div>
     </div>
     }
   </div>
-  <h2>Items</h2>
-  @foreach (var item in Model.GetItems().OrderBy(item => item.At))
-  {
-    <div class="flex-container">
-      <div class="flex-item flex-at">
-        @(item.At)
-      </div>
-      <div class="flex-item flex-tags">
-        @(item.Description)
-      </div>
-      <div class="flex-item flex-more-tags">
-        @foreach (var tag in item.Tags)
-        {
-          <span>@(tag.Name)</span>
-        }
-      </div>
-      <div class="flex-item flex-value">
-        @(item.Amount)
-      </div>
-    </div>
-  }
 </div>
