--- a/Financier.Web/Views/Statements/GetYear.cshtml
+++ b/Financier.Web/Views/Statements/GetYear.cshtml
@@ -11,11 +11,11 @@
   <div>
     <div>
       <h1>
-        Assets:&nbsp;@(month.AssetAmountTotal)
+        Credits:&nbsp;@(month.CreditAmountTotal)
       </h1>
 
       <h1>
-        Expense:&nbsp;@(month.ExpenseAmountTotal)
+        Debits:&nbsp;@(month.DebitAmountTotal)
       </h1>
 
       <h1>
