monthlyExpensesByTagNames: tagNames is not null

--- a/Financier.Web/Views/Items/Chart.cshtml
+++ b/Financier.Web/Views/Items/Chart.cshtml
@@ -128,7 +128,7 @@
         client
           .query({
             query: Apollo.gql`
-            query($tagNames: [String!], $fromYear: Int!, $fromMonth: Int!, $toYear: Int!, $toMonth: Int!){
+            query($tagNames: [String!]!, $fromYear: Int!, $fromMonth: Int!, $toYear: Int!, $toMonth: Int!) {
               monthlyExpensesByTagNames(
                 tagNames: $tagNames,
                 fromYear: $fromYear,
