--- a/Financier.Web/Views/CashFlows/GetYear.cshtml
+++ b/Financier.Web/Views/CashFlows/GetYear.cshtml
@@ -6,7 +6,7 @@
 @foreach (var month in Model)
 {
   <div>
-    @month.At.ToString("MMMM yyyy")
+    @month.StartAt.ToString("MMMM yyyy")
   </div>
   <div>
     <div>
